--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,7 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Начало</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Теми</a>
+                        <a class="nav-link" href="/categories">Категории</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Влизане</a>
