--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="/categories">Категории</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Влизане</a>
+                        <a class="nav-link" href="/login">Влизане</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Регистрация</a>
+                        <a class="nav-link" href="/register">Регистрация</a>
                     </li>
                 </ul>
             </div>
