--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Начало</a>
+                        <a class="nav-link active" aria-current="page" href="/">Начало</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/categories">Категории</a>
