--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,2 +1,9 @@
 <h1>Влизане</h1>
 
+<form action="/login" method="POST">
+    <label for="username">Потребителско име</label>
+    <input type="text" name="username" id="username">
+    <label for="password">Парола</label>
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Влизане">
+</form>
